# HW_2

./: Dockerfile  Pabot.py  pyproject.toml
pythonProject24/: pyproject.toml
pythonProject24/WEB_2/: pyproject.toml
pythonProject24/WEB_2/web_2/: Dockerfile
