[tool.poetry]
name = "web-2"
version = "0.1.0"
description = ""
authors = ["Gaveloshpom <gaveloshpom@gmail.com>"]
readme = "README.md"
packages = [{include = "web_2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
